name:                editor
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/editor#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Commands
                     , Cursor
                     , Display
                     , Editor
                     , Lib
                     , Terminal
                     , Types
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , process
  default-language:    Haskell2010
  default-extensions:  ExplicitForAll
                     , ForeignFunctionInterface
                     , InstanceSigs
                     , LambdaCase
                     , NamedFieldPuns
                     , OverloadedStrings
                     , RankNTypes
                     , ScopedTypeVariables
                     , TemplateHaskell
                     , UnicodeSyntax

executable editor-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , editor
  default-language:    Haskell2010
  default-extensions:  ExplicitForAll
                     , ForeignFunctionInterface
                     , InstanceSigs
                     , LambdaCase
                     , NamedFieldPuns
                     , OverloadedStrings
                     , RankNTypes
                     , ScopedTypeVariables
                     , TemplateHaskell
                     , UnicodeSyntax

test-suite editor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , editor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  ExplicitForAll
                     , ForeignFunctionInterface
                     , InstanceSigs
                     , LambdaCase
                     , NamedFieldPuns
                     , OverloadedStrings
                     , RankNTypes
                     , ScopedTypeVariables
                     , TemplateHaskell
                     , UnicodeSyntax

source-repository head
  type:     git
  location: https://github.com/githubuser/editor
